--- a/readme
+++ b/readme
@@ -15,6 +15,8 @@ To install all modules from the requirements.txt file:
 
 
 PostreSQL access:
+    database name: postgres
+    user: postgres
     password: password123
     port: 5432
 
